SERVER-105517 Fail inserts if we attempt to insert a normal document into a viewless time-series collection (#37213)

GitOrigin-RevId: d6d804bafb08718b1ecbd84cbce400b50d24dc28